--- a/freeCodeCamp/inbex.html
+++ b/freeCodeCamp/inbex.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>Legacy Responsive Web Design</title>
    <link rel="stylesheet" href="/freeCodeCamp/css/style.css">
 </head>
+
 <body>
-   
+<h1>Basic CSS</h1>
+   <div class="box yellow-box">
+      <h5 class="box red-box">padding</h5>
+      <h5 class="box blue-box">padding</h5>
+   </div>
+
+
+
 
    <script src="/freeCodeCamp/js/app.js"></script>
 </body>
+
 </html>
