Add Different Margins to Each Side of an El

--- a/freeCodeCamp/inbex.html
+++ b/freeCodeCamp/inbex.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-<h1>Basic CSS</h1>
+   <h1>Basic CSS</h1>
+   <h5 class="injected-text">margin</h5>
    <div class="box yellow-box">
       <h5 class="box red-box">padding</h5>
       <h5 class="box blue-box">padding</h5>
